--- a/css/index-main.css
+++ b/css/index-main.css
@@ -7,7 +7,7 @@
     --logo-font-family: 'Playfair Display', serif;
 }
 section {
-    background-image: url("/image/section-bg.jpg");
+    background-image: url("../image/section-bg.jpg");
     background-origin: content-box;
     background-repeat: no-repeat;
     background-size: cover;
