--- a/css/index-main.css
+++ b/css/index-main.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap');
 :root {
-    --menu-color: #f7f7f7;
+    --text-color: #505155;
     --main-color: #ffffff;
     --main-font-family:'Roboto', sans-serif;
     --logo-font-family: 'Playfair Display', serif;
 }
-section {
+.info {
+    background-color: var(--main-color);
+}
+.info-instruction {
     background-image: url("../image/section-bg.jpg");
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -27,7 +30,7 @@ width:10%;
 .base-info p{
     font-family: var(--logo-font-family);
     font-size: 45px;
-    color: #505155;
+    color: var(--text-color);
 }
 .blue {
     color: #14a9ee;
@@ -35,7 +38,7 @@ width:10%;
 .general-info p {
  font-family: var(--main-font-family);
  font-size: 19px;
- color: #505155;
+ color: var(--text-color);
 }
 #h3 {
     font-family: var(--main-font-family);
@@ -45,5 +48,5 @@ width:10%;
 .instruction p {
     font-family: var(--main-font-family);
     font-size: 15px;
-    color: #505155;
+    color: var(--text-color);
 }
