--- a/css/index-header.css
+++ b/css/index-header.css
@@ -3,10 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap');
 
 header {
-    background-image: url("../image/header-bg.png");
-    background-origin: content-box;
+    background-image: url("../img/header-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    min-height: 200px;
 }
 
 :root {
@@ -15,22 +16,38 @@ header {
     --main-font-family:'Roboto', sans-serif;
     --logo-font-family: 'Playfair Display', serif;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    max-width: 980px;
+    margin: auto;
+}
+
 .logo > img {
     width: 188px;
 }
 
-.menu a {
+.main-menu a {
     color: var(--menu-color);
     font-size: 14px;
     font-family: var(--main-font-family);
     text-decoration: none;
+    font-weight: bolder;
+   
 }
  
-ul {
+.main-menu li {
     list-style: none;
+    text-align: right;
 }
-.menu a:hover {
-     text-shadow:0px 0px 10px #f7f7f7;
+
+.main-menu a:hover {
+    text-shadow:0px 0px 10px #f7f7f7;
+    font-weight: bold;
 }
 
 #subtitle {
@@ -46,40 +63,118 @@ ul {
 }
 
 .banner h1 {
-font-family: var(--logo-font-family);
-font-size: 180px;
-color: var(--main-color);
+    font-family: var(--logo-font-family);
+    font-size: 180px;
+    color: var(--main-color);
 }
 
-.banner article p:first-child {
+.banner iframe {
+    border-width: 10px;
+    border-color: #ffffff;
+    margin-right: auto;
+    margin-left: 30px;
+}
+
+.trip p:first-child {
     color: var(--main-color);
     font-family: var(--main-font-family);
     font-size: 17px;
     font-weight: bold;
+    margin: 30px;
+    margin-bottom: 0px;
 }
-.banner article p:nth-child(2) {
+
+.trip p:nth-child(2) {
     color: var(--main-color);
     font-family: var(--main-font-family);
     font-size: 13px;
+    margin: 30px;
+    margin-bottom: 0px;
 }
-.banner article p:nth-last-child(2) {
+
+.trip p:nth-last-child(2) {
     color: #ffffffbf;
     font-family: var(--main-font-family);
     font-size: 13px;
+    margin: 30px;
+    margin-bottom: 0px;
 }
-.banner article a {
+
+.trip a {
     color: var(--main-color);
     font-family: var(--main-font-family);
     font-size: 14px;
     text-decoration: none;
+    margin: 30px;
+    margin-bottom:30px;
 }
 
-.banner article a:hover {
+.trip a:hover {
     text-decoration: underline;
     color: #ffffff;
 }
-.banner article a::after {
+
+.trip a::after {
     content: "   →";
     color: #ffffff;
     pointer-events: none;
+}
+
+@media (min-width: 480px) {
+
+    .logo > img {
+    margin-right: auto;
+    padding: 30px;
+    }
+
+    .banner iframe {
+   max-width: 350px;
+    }
+
+
+#subtitle {
+    margin-right: auto;
+    margin-left: 30px;
+}
+
+.banner h1 {
+    font-size: 70px;
+    margin-right: auto;
+    margin-left: 30px;
+    font-weight: 600;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 801px) {
+
+header nav {
+    display: flex;
+}
+
+.main-menu {
+    display: flex;
+    justify-content: space-evenly;
+    flex: 0.7;
+    align-items: center;
+    margin-left: auto;
+    padding: 30px;
+}
+
+
 }
