--- a/css/index-main.css
+++ b/css/index-main.css
@@ -18,12 +18,15 @@
     background-origin: content-box;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    min-width: 200px;
 }
 
 .info h2 {
     color: #6f7380;
     font-family: 'Roboto', sans-serif;
     font-size: 13px;
+    padding-left: 30px;
 }
 
 .info h2::before {
@@ -45,10 +48,11 @@
     font-family: var(--main-font-family);
     font-size: 19px;
     color: var(--secondary-color);
+    text-align: justify;
 }
 
 .instruction img {
-    width:10%;
+    width: 100px;;
 }
 
 .instruction h3 {
@@ -62,3 +66,36 @@
     font-size: 15px;
     color: var(--secondary-color);
 }
+
+.first {
+    background-color: var(--main-color);
+    padding: 30px;
+}
+
+.second {
+    background-color: var(--main-color);
+    padding: 30px;
+}
+
+.third {
+    background-color: var(--main-color);
+    padding: 30px;
+}
+
+@media (min-width: 770px) {
+    .info{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        font-family: 39.5px;
+    }
+
+    .instruction {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 50px;
+        margin-top: 40px;
+        margin-bottom: 150px;
+        margin-left: 20px;
+        margin-right: 20px;
+
+    }
