--- a/css/index-main.css
+++ b/css/index-main.css
@@ -9,10 +9,6 @@
     --secondary-font-family: 'Playfair Display', serif;
 }
 
-.info {
-    background-color: var(--main-color);
-}
-
 .info-instruction {
     background-image: url("../img/section-bg.jpg");
     background-origin: content-box;
@@ -22,11 +18,18 @@
     min-width: 200px;
 }
 
+.info {
+    background-color: var(--main-color);
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    
+}
 .info h2 {
     color: #6f7380;
     font-family: 'Roboto', sans-serif;
     font-size: 13px;
     padding-left: 30px;
+    margin-top: 50px;
 }
 
 .info h2::before {
@@ -36,8 +39,10 @@
 
 .basic-info p {
     font-family: var(--secondary-font-family);
-    font-size: 45px;
+    font-size: 39.5px;
     color: var(--secondary-color);
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .blue {
@@ -49,10 +54,23 @@
     font-size: 19px;
     color: var(--secondary-color);
     text-align: justify;
+    line-height: 2;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.instruction {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 30px;
+    margin-top: 40px;
+    margin-bottom: 100px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .instruction img {
-    width: 100px;;
+    width: 280px;
 }
 
 .instruction h3 {
@@ -82,20 +100,32 @@
     padding: 30px;
 }
 
-@media (min-width: 770px) {
+
+@media (min-width: 800px) {
     .info{
-        display: grid;
+        grid-template-rows: none;
         grid-template-columns: 1fr 1fr;
-        font-family: 39.5px;
+        margin-top: 60px;
+        margin-left: 30px;
+        margin-right: 30px;
     }
 
+     .info h2{
+         margin-top: auto;
+     }
+
     .instruction {
-        display: grid;
+        grid-template-rows: none;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 50px;
         margin-top: 40px;
         margin-bottom: 150px;
         margin-left: 20px;
         margin-right: 20px;
-
+        align-items: stretch;     
     }
+
+    .instruction img {
+    width: 100px;;
+}
+}
