--- a/css/index-footer.css
+++ b/css/index-footer.css
@@ -2,20 +2,25 @@
     --menu-color: #f7f7f7;
     --main-color: #ffffff;
     --main-font-family:'Roboto', sans-serif;
-    --secondary-color: #505155;
-    --bg-color-grid: rgba(33, 35, 36, 0.3);
+    --secondary-color: #b7b7b9;
+    --bg-color-grid: rgba(10, 10, 10, 0.5);
+    --bg-color-nav: rgb(5, 5, 5);
 }
 
-    /*.contact-info
-    background-image: url ("../img/footer-bg.jpg");
+body {
+    max-width: 980px;
+    margin: auto;
+}
+    #connection {
+    background: url("../img/footer-bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     min-height: 200px;
-}*/
+}
 
-footer {
-    background-color: #00cce3;
+#footer-nav {
+    background: var(--bg-color-nav) ;
 }
 
 .contact-info h3 {
@@ -66,7 +71,9 @@ footer {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-row-gap: 30px;
-    margin: 30px;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-top: 30px;
 }
 
 .footer-nav {
@@ -79,7 +86,7 @@ footer {
 
 .footer-logo img {
     width: 188px;
-    padding-top: 200px;
+    padding-top: 100px;
 }
 
 .footer-menu a {
@@ -100,4 +107,83 @@ footer {
     text-shadow:0px 0px 10px #f7f7f7;
     font-weight: bold;
     color: var(--menu-color);
+}
+
+
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
+
+.social-icons a, a:hover {
+  text-decoration: none;
+}
+
+.socialbtns, .socialbtns ul, .socialbtns li{
+  margin: 0;
+  padding: 5px;
+}
+
+.socialbtns li {
+    list-style: none outside none;
+    display: inline-block;
+}
+
+.socialbtns .fa {
+  width: 40px;
+    height: 28px;
+  color: #FFF;
+  background-color: #000;
+  padding-top: 12px;
+  border-radius: 20px;
+  -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -o-border-radius: 20px;
+  transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+  -webkit-transition: all ease 0.5s;
+  -o-transition: all ease 0.5s;
+}
+
+.socialbtns .fa:hover {
+  transform: scale(1.2,1.2);
+  -moz-transform: scale(1.2,1.2);
+  -webkit-transform: scale(1.2,1.2);
+  -o-transform: scale(1.2,1.2);
+  transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+  -webkit-transition: all ease 0.5s;
+  -o-transition: all ease 0.5s;
+}
+
+
+@media (min-width: 680px) {
+ .contact-info {
+     grid-template-rows: none;
+     grid-template-columns: 1fr 1fr;
+     grid-gap: 30px;
+ }
+
+}
+
+@media (min-width: 800px) {
+    .contact-info {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 15px;
+    }
+
+    .footer-nav {
+        display: block;
+    }
+
+    .footer-logo {
+     display: flex;
+     justify-content: center;
+    }
+    .footer-menu {
+        display: flex;
+        justify-content: space-around;
+        margin-right: 200px;
+        margin-left: 200px;
+}
+    .footer-menu a {
+        font-size: 10px;
+}
 }
