--- a/css/index-nav-menu.css
+++ b/css/index-nav-menu.css
@@ -1,8 +1,9 @@
 :root {
     --menu-color: #f7f7f7;
     --main-color: #ffffff;
-    --main-font-family:'Roboto', sans-serif;
-    --logo-font-family: 'Playfair Display', serif;
+    --secondary-color: #2f2f35;
+    --main-font-family: 'Roboto', sans-serif;
+    --menu-font-family: 'Playfair Display', serif;
 }
 
 body {
@@ -10,25 +11,79 @@ body {
     margin: auto;
 }
 
-.logo > img {
+nav {
+    background: var(--secondary-color);
+}
+
+.logo-cross>img {
     width: 188px;
-    padding: 30px;
-    }
-    .main-menu a {
+    padding: 40px;
+    padding-left: 30px;
+}
+
+.logo-cross p {
+    font-size: 35px;
+    color: var(--main-color);
+    padding-right: 40px;
+}
+
+.logo-cross p:hover {
+    text-shadow: 0px 0px 10px #f33a3a;
+    font-weight: bold;
+}
+
+.logo-cross {
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-nav-menu a {
     color: var(--menu-color);
-    font-size: 14px;
+    font-size: 17px;
     font-family: var(--main-font-family);
     text-decoration: none;
     font-weight: bolder;
 }
- 
-.main-menu li {
+
+.main-nav-menu li {
     list-style: none;
-    text-align: right;
-    
+    line-height: 3;
 }
 
-.main-menu a:hover {
-    text-shadow:0px 0px 10px #f7f7f7;
+.main-nav-menu a:hover {
+    text-shadow: 0px 0px 10px #f7f7f7;
     font-weight: bold;
+}
+
+.button a::after {
+    content: "   →";
+    color: var(--main-color);
+}
+
+.button a {
+    padding: 0.35em 1.2em;
+    border: 0.1em solid #FFFFFF;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    color: #FFFFFF;
+    text-align: center;
+    transition: color 0.7s;
+    background-color: transparent;
+}
+
+.button a:hover {
+    color: #01292b;
+    background-color: #FFFFFF;
+    cursor: pointer;
+}
+
+.button a:hover::after {
+    color: #01292b;
+}
+
+.main-nav-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 250px;
 }
